samples/_failures_safe/1761624895_9d77d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87acda18.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_87acda18.c:156:23: error: expected ‘)’ at end of input
  156 |         switch (tokens
      |                ~      ^
      |                       )
./samples/SAFE/__tmp_87acda18.c:156:17: error: switch quantity not an integer
  156 |         switch (tokens
      |                 ^~~~~~
./samples/SAFE/__tmp_87acda18.c:156:9: error: expected declaration or statement at end of input
  156 |         switch (tokens
      |         ^~~~~~
./samples/SAFE/__tmp_87acda18.c:156:9: error: expected declaration or statement at end of input
